k8s/basket.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: basket
  name: basket
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: basket
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: basket
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: basket
    spec:
      containers:
      - name: basket
        image: nhatthai/dotnet-basket.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80

      imagePullSecrets:
      - name: registry-key
