k8s/catalog.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: catalog
  name: catalog
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: catalog
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: catalog
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: catalog
    spec:
      containers:
      - name: catalog
        image: nhatthai/dotnet-catalog.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
