k8s/identity.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: identity
  name: identity
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: identity
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: identity
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: identity
    spec:
      containers:
      - name: identity
        image: nhatthai/dotnet-identity.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
