k8s/mapusermvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: mapusermvc
  name: mapusermvc
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: mapusermvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mapusermvc
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: mapusermvc
    spec:
      containers:
      - name: mapusermvc
        image: nhatthai/dotnet-mapusermvc
        imagePullPolicy: Always
        ports:
        - containerPort: 80
