k8s/ordering-signalrhub.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: ordering-signalrhub
  name: ordering-signalrhub
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: ordering-signalrhub
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ordering-signalrhub
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: ordering-signalrhub
    spec:
      containers:
      - name: ordering-signalrhub
        image: nhatthai/dotnet-ordering.signalrhub
        imagePullPolicy: Always
        ports:
        - containerPort: 80
