k8s/ordering.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: ordering
  name: ordering
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: ordering
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ordering
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: ordering
    spec:
      containers:
      - name: ordering
        image: nhatthai/dotnet-ordering.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
