k8s/rabbitmq.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: rabbitmq
  name: rabbitmq
spec:
  ports:
  - name: port-1
    port: 5672
    targetPort: 5672
  - name: port-2
    port: 15672
    targetPort: 15672
  selector:
    app: eshop
    component: rabbitmq
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:3-management-alpine
        ports:
        - containerPort: 5672
        - containerPort: 15672
