k8s/redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: keystore-data
  name: keystore-data
spec:
  ports:
  - port: 6379
  selector:
    app: eshop
    component: keystore-data
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: keystore-data
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: keystore-data
    spec:
      containers:
      - name: keystore-data
        image: redis
