k8s/web-mvc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: webmvc
  name: webmvc
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: webmvc
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webmvc
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: webmvc
    spec:
      containers:
      - name: webmvc
        image: nhatthai/dotnet-webmvc
        imagePullPolicy: Always
        ports:
        - containerPort: 80
