k8s/webhook.client.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: webhookclient
  name: webhookclient
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: webhookclient
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webhookclient
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: webhookclient
    spec:
      containers:
      - name: webhookclient
        image: nhatthai/dotnet-webhook.client
        imagePullPolicy: Always
        ports:
        - containerPort: 80
