k8s/webhooks.api.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: webhooksapi
  name: webhooksapi
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: webhooksapi
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webhooksapi
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: webhooksapi
    spec:
      containers:
      - name: webhooksapi
        image: nhatthai/dotnet-webhooks.api
        imagePullPolicy: Always
        ports:
        - containerPort: 80
