k8s/webshopping-agg.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eshop
    component: webshoppingagg
  name: webshoppingagg
spec:
  ports:
  - port: 80
  selector:
    app: eshop
    component: webshoppingagg
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webshoppingagg
spec:
  template:
    metadata:
      labels:
        app: eshop
        component: webshoppingagg
    spec:
      containers:
      - name: webshoppingagg
        image: nhatthai/dotnet-webshoppingagg
        imagePullPolicy: Always
        ports:
        - containerPort: 80
