k8s/ingress_cloud.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: eshop
    component: frontend
  name: eshop-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /basket-api(/|$)(.*)
        backend:
          serviceName: basket
          servicePort: 80
      - path: /catalog-api/*
        backend:
          serviceName: catalog
          servicePort: 80
      - backend:
          serviceName: ingress-demo
          servicePort: 80
        path: /hello-world-two(/|$)(.*)
